--- a/helm-charts/charts/config-test-1/templates/configmap.yaml
+++ b/helm-charts/charts/config-test-1/templates/configmap.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: configmap-test-1
-  namespace: hmo-test
-data:
-  IsAlive: {{.Values.data }}
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: configmap-test-1
+#   namespace: hmo-test
+# data:
+#   IsAlive: {{.Values.data }}
