--- a/helm-charts/charts/config-test-2/templates/configmap.yaml
+++ b/helm-charts/charts/config-test-2/templates/configmap.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: configmap-test-2
-  namespace: hmo-test
-data:
-  IsAlive: {{.Values.data }}
-  ThisIsNumberTwo: "yes it is"
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: configmap-test-2
+#   namespace: hmo-test
+# data:
+#   IsAlive: {{.Values.data }}
+#   ThisIsNumberTwo: "yes it is"
