--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -6,10 +6,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: {{ .name }}
+  # needs to be the same namespace and argo cd
   namespace: openshift-gitops
 spec:
-  # project can not be defined here - seems like we can't control the project of the ApplicationSet
-  # project: default
   generators:
     {{- range $env := .environments }}
     - clusters:
@@ -22,12 +21,10 @@ spec:
     {{- end }}
   template:
     metadata:
-      name: {{.name}}-clustergenerator-{{ $i }}
-      namespace: default
-      #namespace: {{ (.destination).namespace }}
+      name: {{.name}}-clustergenerator
+      namespace: {{ (.destination).namespace }}
     spec:    
-      # project: generator-test-project
-      project: default
+      project: {{ .project | default $.Values.default.app.project }}
       syncPolicy:
         automated:
           prune: true
@@ -35,13 +32,8 @@ spec:
         syncOptions:
           - ServerSideApply=true
       destination:
-        #name: 'in-cluster' - this works
         server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
-
-        #namespace: openshift-gitops
-        # working here
         namespace: openshift-gitops
-
       source:
         repoURL: {{ $.Values.globalAutomationRepoURL }}
         path: helm-charts/charts/argocd-app-of-apps
@@ -54,8 +46,8 @@ spec:
               value: {{ $.Values.globalAutomationRepoURL }}
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
-            - name: app
-              value: {{ $.Values.default.app }}
+            # - name: app
+            #   value: {{ $.Values.default.app }}
 {{- end }}
 {{- end }}
 {{- end }}
